--- a/app/static/style.css
+++ b/app/static/style.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center;
 }
 
-#radio_buttons, #table_form, #bouton_submit{
+#checkbox, #table_form, #bouton_submit{
     margin-top: 2em;
     margin-left: auto;
     margin-right: auto;
